# lev

./: .env.example  .gitignore  LICENSE  Makefile  README.md  architecture_refactor.md  backlog.md  eval.py  eval2.py  fs_mcp.json  kusto.json  kusto.json.next  kusto_graph_easy.evl  kusto_graph_easy.json  kusto_graph_easy_results_1757110546.csv  kusto_relational_easy.evl  kusto_relational_easy.json  manifest_migration_plan.md  personas.json  provider_profiles.json  pyproject.toml  todo.md
.clinerules/: .instructions.md
lev/: __init__.py  config.py  context_compressor.py  controller.py  conversation.py  dataset_loader.py  judge.py  llm_config_loader.py  loader.py  logging.py  manifest.py  output.py  reporting.py  runner.py  runner2.py  scoring.py  workflow.py
lev/agents/: factory.py  reasoning.py  tool.py
lev/common/: extensions.py  roles.py
lev/core/: agent.py  chat_history.py  config.py  llm_provider.py  mcp.py  provider_registry.py  results.py
lev/host/: helpers.py  mcp_client.py  mcp_host.py  mcp_registry.py
lev/llm_providers/: README.md  __init__.py  azure_openai_provider.py  lmstudio_provider.py  openai_provider.py  provider_factory.py
lev/mcp/: helpers.py  mcp_client.py  mcp_host.py  mcp_registry.py
lev/prompts/: __init__.py  context_compressor.py  introspection.py  (+4 more)
tests/: __init__.py  test_chat_history.py  test_judge.py  test_judge_demo.py  test_llm_config_loader.py  test_lmstudio_provider.py  test_loader_mcp.py  test_mcp_eval.py  test_mcp_host_developer_nudge.py  test_memory_server.py  test_nested_get.py  test_reasoning_agent_introspection.py
(+14 files in other folders)
